--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -3,7 +3,7 @@
 
 {% block title %}Reset your password{% endblock %}
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'account/css/register.css' %}" /> 
+<link rel="stylesheet" type="text/css" href="{% static 'account/css/edit.css' %}" /> 
 {% endblock %}
 
 {% block content %}
