--- a/club/templates/club/create_group.html
+++ b/club/templates/club/create_group.html
@@ -6,7 +6,7 @@
 {{ group_form.media }}
 {% endblock %}
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'club/css/create_club.css' %}?20200417"/>
+<link rel="stylesheet" type="text/css" href="{% static 'club/css/edit.css' %}?20200417"/>
 {% endblock %}
 
 {% block content %}
