--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -3,12 +3,11 @@
 
 {% block title %}Create an account{% endblock %}
 {% block css%}
-<link rel="stylesheet" type="text/css" href="{% static 'account/css/register.css' %}?20170302" />
+<link rel="stylesheet" type="text/css" href="{% static 'account/css/edit.css' %}?20170302" />
 {% endblock %}
 
 {% block content %}
   <h1 class="help-text">Create an account</h1>
-  <p class="help-text">Please, sign up using the following form:</p>
   <form action="." method="post">
     {{ user_form.as_p }}
     {% csrf_token %}
