--- a/account/templates/registration/password_reset_confirm.html
+++ b/account/templates/registration/password_reset_confirm.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Reset your password{% endblock %}
+{% block css %}
+<link type="text/css" rel="stylesheet" href="{% static 'account/css/edit.css' %}" />
+{% endblock %}
 
 {% block content %}
     <h1>Reset your password</h1>
     {% if validlink  %}
-    <p>Please enter your new password twice:</p>
     <form action="." method="post">
         {{ form.as_p }}
         {% csrf_token %}
