--- a/book/static/book/css/detail.css
+++ b/book/static/book/css/detail.css
@@ -34,8 +34,7 @@ i.fa:hover {
 
 /* book infos */
 ul.inner-ul {
-    list-style: none;
-    margin-left: 10px;
+    list-style: disc;
 
 }
 
@@ -52,3 +51,30 @@ img.image-detail {
     margin-right: 20px;
 }
 
+.book.author {
+    display: block;
+    margin-bottom: 1%;
+    }
+
+.book.author::before {
+    content: "by "
+    }
+
+div.details {
+    list-style-type: inherit;
+    margin-top: 10px;
+}
+
+.club-line{
+    margin-bottom: 0px;
+}
+
+hr {
+    color: #d8d8d8;
+    margin-top: 0px;
+}
+
+.book-top-tile {
+    font-weight: bold;
+    font-size: 1.5em;
+}
