--- a/club/static/club/css/reading_club_detail.css
+++ b/club/static/club/css/reading_club_detail.css
@@ -4,6 +4,7 @@ p.top-title {
     font-size: 32px;
     text-align: center;
     text-decoration: underline;
+    font-weight: bold;
 }
 
 .slidecontainer {
@@ -93,14 +94,12 @@ ul.book-info {
     padding: 5px 5px 5px 5px;
     margin-left: 10p;
     margin-right: 10px;
-    width: 45%;
+    width: 80%;
     height: 257px;
     background-color: yellowgreen;
 }
 
-div.all-status {
-    display: inline-block
-}
+
 
 div.book-settings {
     background-color: yellow;
@@ -111,7 +110,7 @@ div.book-settings {
 
 div.like-icon {
     display: inline-block;
-    margin-left: 118.65px;
+    margin-left: 3%;
 }
 
 span.count {
@@ -121,7 +120,7 @@ span.count {
 }
 
 select.book-status {
-    width: 300px;
+    width: 175px;
     text-align: center;
 }
 
@@ -185,21 +184,21 @@ span.user-name {
 }
 
 div.all-status {
-    border: solid black;
-    border-width: 2px;
+    width: 90.8%;
+    display: inline-block;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 div.self-status {
     border: solid black;
-    border-width: 0px 0px 5px 0px;
+    border-width: 0px 0px 3px 0px;
     padding: 5px;
 }
 
 p.status-header {
     font-size: 16px;
-    border: solid black;
-    border-width: 0px 0px 5px 0px;
-    margin: 2px 2px 16px 2px;
+    margin: 2px 2px 0px 2px;
 }
 
 /* comment section */
@@ -212,8 +211,12 @@ div.comment {
 
 h4 {
     display: block;
-    margin-top: 70px
 }
+
+.status-ruler {
+    color: grey;
+    margin-top: 0px;
+    }
 
 
 img.comment-profile-img {
@@ -276,3 +279,8 @@ label.control-label {
     visibility: hidden;
     display: none;
 }
+
+.book-description {
+    overflow-y: auto;
+    max-height: 117%;
+    }
