--- a/account/static/account/css/base.css
+++ b/account/static/account/css/base.css
@@ -2,17 +2,70 @@ body {
     width: 90%;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 #header {
-    background-color: lightgrey;
-    padding: 10px;
+    background-color: #1e81cc;
+    padding: 15px 10px 15px 10px;
+    margin-right: 0%;
+    font-size: 1.3em;
+    width: 112.6%;
+    margin-left: -8.05%;
+    margin-top: -1%;
+    height: 75px;
 
 
     }
 
+#content {
+    margin-top: 2%;
+
+}
+
+/* remove the outline when clicking on these elements */
+a {
+    outline: 0;
+}
+
+a:hover a:active a:focus {
+    outline: 0;
+}
+
+input {
+    outline: 0;
+}
+
+input:hover input:active input:focus {
+    outline: 0;
+}
+
+button {
+    outline: 0;
+}
+
+button:hover button:active button:focus {
+    outline: 0;
+}
+
+
+/* logo */
+
 .logo {
-    background-color: red;
+    margin-right: 2%;
+    margin-left: 1%;
+    float: left;
+}
+
+.logo-img {
+    float: left;
+    margin-left: 27px;
+    margin-right: 20px;
+}
+
+.logo-link {
+    outline: none;
+    border: none;
 }
 
 .user {
@@ -21,21 +74,30 @@ body {
 
 }
 
+.guest-warning {
+    text-decoration: underline;
+}
+
 .top-item {
-    color: brown;
+    color: white;
+    text-decoration: none;
+    display: inline flow-root;
+
 }
 
 .top-item:hover {
-    color: lightgrey;
-    background-color: brown;
-    padding: 8px;
+    color: white;
+    background-color: #60a2d5;
+    height: 59px;
     }
 
 li.inline-top {
     display: inline;
     padding: 0.5em;
-    color: brown;
+    color: #ff474d;
     text-decoration: none;
+    display: inline flow-root;
+    margin-top: 20px;
 }
 
 .warning {
@@ -45,8 +107,29 @@ li.inline-top {
 /* Style login/logout/register */
 .account {
     padding: 5px;
-    background-color: lightseagreen;
-    border: 2px solid lightseagreen;
+    background-color: #ff474d;
+    border: 2px solid #ff474d;
     border-radius: 5px;
+    color: white;
     text-decoration: none;
+    display: inline flow-root;
+    margin-top: 21px;
 }
+
+.account:hover {
+    background-color: #CC393E;
+    border-color: #CC393E;
+}
+
+.selected {
+    background-color: #ff474d;
+    color: white;
+    height: 49px;
+}
+
+.selected:hover {
+    color: #1e81cc;
+    background-color: #ff474d;
+
+}
+
