--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 <link rel="import" href="localhost:8000/club/templates/club/list_view.html">
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'account/css/tabs.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'account/css/tabs.css' %}?20021111">
 
 <style>
     h1 {
@@ -20,8 +20,6 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
-    <h1>Dashboard</h1>
-
     <ul class="tab-list">
         <li class="active tab"><a class="tab-control" href="#groups">Groups</a></li>
         <li class="tab"><a class="tab-control" href="#books">Books</a></li>
